make proper command for running application with reflection